manifests/workloads/artifactory-oss/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: artifactory-danmanners-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: artifactory.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
  labels:
    app.kubernetes.io/instance: artifactory
spec:
  type: ExternalName
  externalName: kube.danmanners.com
  sessionAffinity: None
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: artifactory-danmanners-web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`artifactory.danmanners.com`)
      kind: Rule
      services:
        - name: arti-artifactory
          port: 8082
      middlewares:
        - name: http-https-redirectscheme
          namespace: kube-system
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: artifactory-danmanners-websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`artifactory.danmanners.com`)
      kind: Rule
      services:
        - name: arti-artifactory
          port: 8082
  tls:
    secretName: artifactory-danmanners-cert
